# genomic-tokenizer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  t_install.py  tox.ini
.github/workflows/: docs.yml  publish.yml  pytest.yml
genomic_tokenizer/: __init__.py  core.py
notes/: notes.md
tests/: test_core.py  tokenizer_config.json
